# Ogre-vcpkg-Example-Project

./: CMakeLists.txt  CMakePresets.json  README.md
Ogre vcpkg example project/: BasicTutorial1.cpp  CMakeLists.txt  plugins.cfg  resources.cfg
